Sugati/src/objects/Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_MembersTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group MembersTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday_Question__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Booking_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Booking Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Cost_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Cost Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travelling_Country_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travelling Country Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlock_Opportunit_approver_profile__c</fullName>
        <label>Unlock Opportunit approver profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trigger Setting</label>
</CustomObject>